# advanced-python-programming-project

./: .clang-format  .clang-tidy  .gitignore  LICENSE  Makefile  README.md  TODO_REMOVE.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cpp_linter.yaml  cpp_linters.yaml  linters.yaml  python_linter.yaml  unit_tests.yaml
src/app/: hello.py  imcli.py
src/app/cmd/: command.py  parser.py  rotate.py  scale.py  translate.py
src/app/fast/: foo.c
src/app/img/: read.py
src/cpp/fast/: fast.cpp  foo.cpp
src/python/app/: fast.pyi  imcli.py
src/python/app/command/: io.py  parser.py
src/python/app/error/: app_exception.py  invalid_format_exception.py  unknown_format_exception.py
src/python/app/image/: image.py
src/python/app/io/: bmp.py  format_checker.py  format_factory.py  format_reader.py  format_writer.py  jpeg.py  known_format.py  png.py
src/python/app/operation/: __init__.py  bgr2rgb.py  flip.py  grayscale.py  histogram_equalization.py  identity.py  ioperation.py  operation.py  roll.py  rotate90.py
tests/cpp/: test_fast.py
tests/python/: test_operations.py
tests/python/app/: conftest.py
tests/python/app/io/: conftest.py
tests/python/app/io/bmp/: test_bmp_reader.py  test_bmp_writer.py  test_checker.py  test_core_header.py  test_file_header.py  test_info_header.py  test_os22_header.py  test_utils.py
tests/resources/: 4.avif
