[project]
name = "app"
version = "0.0.1"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers,
    Natural Language :: English,
    Programming Language :: C++,
    Programming Language :: Python,
    Programming Language :: Python :: 3.13,
    Programming Language :: Python :: Implementation :: CPython

[options]
include_package_data = True
package_dir =
    =./src/
packages = find:
python_requires = >=3.13
install_requires =
    importlib-metadata; python_version<"3.13"
    cython
    matplotlib==3.10.0
    pandas==2.3.3

[options.entry_points]
console_scripts =
  imcli = app.imcli:main

[options.package_data]
* = py.typed

[options.extras_require]
development =
    mypy==1.18.2,
    ruff==0.14.6,
    flake8==7.3.0,
    pylint==4.0.2,
    nbqa==1.9.1
    pytest==9.0.1

[options.packages.find]
where = ./src/
include =
    app
    app.*
